--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -28,7 +28,7 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="com.refridev.bankapp"
-            android:targetClass="com.refridev.bankapp.ui.transaction.amount.InputAmountActivity">
+            android:targetClass="com.refridev.bankapp.ui.recipient.RecipientListActivity">
             <parameter
                 android:name="moneyTransfer.transferMode"
                 android:key="transferMode"/>
